# dbt-graph-detective

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  setup.cfg
detective/: cli.py  manifest_helper.py  predicates.py
