[metadata]
name = dbt-graph-detective
version = 0.0.1
author = Alban King
description = A tool for searching dbt's graph, particularly with the context of
classifiers =
    Programming Language :: Python :: 3

[options]
python_requires = >=3.10
install_requires =
    dbt-core>=1.8.6
    click>=8.1.7

[options.extras_require]
dev =
    pre-commit

[options.entry_points]
console_scripts =
    dbt-graph-detective = detective.cli:main
